fix multiselect layout shifting

--- a/client/src/style/scss/multiselect.scss
+++ b/client/src/style/scss/multiselect.scss
@@ -6,6 +6,10 @@
     }
     .multiselect__input {
         background: transparent;
+        padding-left: 0;
+        padding-top: 2px;
+        margin-bottom: 10px;
+        font-size: 14px;
     }
     .multiselect__option {
         white-space: normal;
